--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,6 +17,7 @@ services:
 
   sonarqube:
     image: sonarqube:8.9-community
+    platform: linux/amd64 
     container_name: sonarqube
     environment:
       - SONARQUBE_JDBC_URL=jdbc:postgresql://db:5432/sonar
@@ -31,6 +32,7 @@ services:
 
   db:
     image: postgres:latest
+    platform: linux/amd64 
     container_name: sonar-db
     environment:
       - POSTGRES_USER=sonar
