--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -106,7 +106,7 @@ pipeline {
         PATH = "${JAVA_HOME}/bin:${PATH}"
       }
       steps {
-        sh './gradlew sonarqube -Dsonar.host.url=http://sonarqube:9000 -Dsonar.login="admin" -Dsonar.password="ensf400"'
+        sh './gradlew sonarqube -Dsonar.host.url=http://sonarqube:9000 -Dsonar.login="admin" -Dsonar.password="ensf400"' //changed the password from admin to ensf400 in sonarqube website
       }
     }
   }
